# FindMyAccounts

./: LICENSE  MANIFEST.in  README.md  SECURITY.md  WhereDoIHaveAnAccount.spec  imap-server.json  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  scraper.py  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  help-me.md  help-me.yml
.github/workflows/: build.yml  codeql-analysis.yml  deploy-api.yml  publish.yml  test.yml  tests.yml
FindMyAccounts/: cli.py  scraper.py
WhereDoIHaveAnAccount/: __main__.py  cli.py  scraper.py
api/: main.py  requirements.txt
docs/: CNAME  Gemfile  _config.yml  about.md  another.html  app.html  browserconfig.xml  datenschutzerklaerung.html  documentation.md  impressum.html  index.html  index.md  site.webmanifest
docs/_data/: locale.yml  navigation.yml  variables.yml
docs/_includes/: author-links.html
docs/_includes/head/: favicon.html
docs/_layouts/: base.html  default.html
docs/assets/css/: stepper.css  style.scss
docs/assets/img/: Logo.afdesign
docs/assets/js/: stepper.js  stepper.ts
gui/: gui.py
gui/web/: index.html
gui/web/css/: style.css
gui/web/js/: stepper.js
tests/: dump_filter_list.feather  dump_model.pkl  dump_vectorizer.pkl  test_cli.py  test_scraper.py
web/: README.md
