[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FindMyAccounts"
readme = "README.md"
authors = [
    {name = "Timo Kühne"},
]
version = "1.4.4"
description = "Simple tool to find out where you have accounts."
requires-python = ">=3.6.1"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
]

dependencies = [
    "imap-tools>=0.5",
    "requests>=2.24",
    "email_validator >=1.1.1",
    "pandas >=1.0.3",
    "feather-format >=0.3",
    "nltk >=3.4.5",
    "sklearn",
]

[project.urls]
Documentation = "https://github.com/H3nkl3r/FindMyAccounts/wiki"
Source = "https://github.com/h3nkl3r/FindMyAccounts"

[project.optional-dependencies]
test = [
    "pytest >=6.2.4",
    "pytest-cov >=2.12.0",
    "tox >=3.14.0",
]

[project.scripts]
FindMyAccounts = "FindMyAccounts.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=FindMyAccounts --cov-report=xml"
testpaths = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8.0
envlist = py39, py38, py37, py36
isolated_build = true

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
passenv =
    TEST_EMAIL_USERNAME
    TEST_EMAIL_PASSWORD
    TEST_EMAIL_IMAP_SERVER
deps =
    imap-tools>=0.5
    requests>=2.20
    email_validator >=1.1.1
    pytest >=6.2.4
    pytest-cov >=2.12.0
    pandas >=1.0.3
    feather-format >=0.3
    nltk >=3.4.5
    sklearn
commands =
    pytest --basetemp={envtmpdir}
"""
