[metadata]
name = WhereDoIHaveAnAccount
description = Simple tool to find out where you have accounts
long_description = file: README.md
version = 1.2.0
url = https://github.com/H3nkl3r/WhereDoIHaveAnAccount
author = Timo Kühne
license = AGPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    WhereDoIHaveAnAccount
install_requires =
    imap-tools>=0.5
    requests>=2.20
python_requires = >=3.6
zip_safe = no
include_package_data=True

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24

[options.entry_points]
console_scripts =
    WhereDoIHaveAnAccount=WhereDoIHaveAnAccount.scraper:main
